--- a/index.html
+++ b/index.html
@@ -10,12 +10,16 @@
 
 <body>
   <div class="container">
-    
+
     <h1>Promoção Especial</h1>
     <p>Aproveite nossa oferta por tempo limitado!!</p>
     <p>Corra! A promoção acaba em:</p>
     <div class="contador"></div>
+    <img src = pokelogo.png
+      width="400px" alt="pokelogo">
   </div>
+  <img src = detetive.png
+    width="200px" alt="detetive">
   <script src="script.js"></script>
 </body>
 
