--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <div class="contador"></div>
     <img src = pokelogo.png
       width="400px" alt="pokelogo">
+    <h1> Um Detechu de R$ 200,00 por R$ 195,00</h1>
   </div>
   <img src = detetive.png
     width="200px" alt="detetive">
